--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ Error message and password prompt
 
 <li>מרינה זוטו</li>
 
-<li>נאדיה</li>
+<li>נדיה</li>
 
 <li>סוף הנחלה</li>
 
@@ -8125,9 +8125,8 @@ Error message and password prompt
 <pre>{
     &quot;tiddlers&quot;: {
         &quot;Untitled&quot;: {
-            &quot;title&quot;: &quot;Untitled&quot;,
-            &quot;text&quot;: &quot;https://lut.im/9yqgVBUXqA/JcnhaFI7DwaT9664.jpg&quot;,
-            &quot;type&quot;: &quot;text/plain&quot;
+            &quot;text&quot;: &quot;נא&quot;,
+            &quot;title&quot;: &quot;Untitled&quot;
         }
     }
 }</pre>
@@ -8208,10 +8207,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170119225008497" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20161023184709475" modified="20170324123700611" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Missing</pre>
+<div created="20161023184709475" modified="20170330000829684" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20170324123704969" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20170330001058050" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8220,7 +8219,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="צ'נג [[האחיות כהן]]" title="$:/StoryList">
+<div list="מיזונפלציה אלה נדיה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8240,7 +8239,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170328202439260" title="$:/temp/search">
+<div created="20161023184814872" modified="20170330000744816" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8659,7 +8658,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161026214951927" modified="20170325181959393" tags="[[נאמני הגנזך]]" title="גורה">
+<div created="20161026214951927" modified="20170329225208139" tags="[[נאמני הגנזך]]" title="גורה">
 <pre>[img[https://lut.im/jwd9ttNALI/VOYeMadgknrTKN6D.jpg]]
 
 !!![[יויו]]:
@@ -8669,7 +8668,7 @@ Error message and password prompt
 
 היא משוש חיי ואשמור עליה לנצח.
 
-את התמונה הזאת מצאתי זרוקה בפח שליד המייבש הכביסה.
+את התמונה הזאת מצאתי זרוקה בפח שליד המייבש הכביסה. כן, היא אמרה לי שכבר כמה ימים היא מנסה לצייר את עצמה אבל לא הולך לה.
 
 
 מהרגע שפתחתי את [[האתר הזה|האחיות כהן]], [[היא לא מפסיקה לכתוב|הכתיבה]], ממלאה ומעטרת ומשתדלת להתנהג כיאות.</pre>
@@ -9362,7 +9361,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 היא והספרית הן המבוגרות האחראיות בסיפור.
 </pre>
 </div>
-<div created="20170112174310883" modified="20170325194106967" title="מיזונפלציה">
+<div created="20170112174310883" modified="20170330001122169" title="מיזונפלציה">
 <pre>[img[https://lut.im/4P071SxwzH/5w7PxVmJQ0wK3AoL.jpg]]
 
 
@@ -9371,7 +9370,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 [[מיזונפלציה|https://en.wikipedia.org/wiki/Mise_en_place]] זה ה- א-ב של המטבח. זה ונקיון.
 
 
-בבית בו גדלתי לא השתמשו במונח הזה אבל ככה עבדנו. קודם קוראים את המתכון או מקבלים הסברים מפורטים - בעיקר מאחותי [[נאדיה]] ולפעמים גם מאימא או מסבתא, מכינים את החומרים, מכינים את מה שמכינים ו[[מנקים היטב]].
+בבית בו גדלתי לא השתמשו במונח הזה אבל ככה עבדנו. קודם קוראים את המתכון או מקבלים הסברים מפורטים - בעיקר מאחותי [[נדיה]] ולפעמים גם מאימא או מסבתא, מכינים את החומרים, מכינים את מה שמכינים ו[[מנקים היטב]].
 
 לאחרונה שמתי לב, שאני מזנפלץ ומזונפלץ כל הזמן. אני לא מת על שיוף סכינים, אבל תמיד יש לי ספייר מכל דבר. 
 חדר העבודה שלי תמיד ערוך לכל משימה. יש שם, כמובן, את כל הציוד הנדרש, ולעולם אסדר הכל ואסגור הכל כשמסתיימת העבודה.
@@ -9434,10 +9433,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 [img[https://lut.im/sSu3JQWm5C/UODl0NUHJe49zN3L.jpg]]</pre>
 </div>
-<div created="20170112193700442" modified="20170112193716594" title="נאדיה">
-<pre>!!![[יויו]]:
+<div created="20170112193700442" modified="20170330001135924" title="נדיה">
+<pre>
+[img[https://lut.im/YyOg51XGfA/nDjOjcd5qoNrHdfU.jpg]]
 
-אחותי הגדולה</pre>
+!!![[יויו]]:
+
+האחות הבכורה והביולוגית של גורה ושלי.</pre>
 </div>
 <div created="20170201205235325" modified="20170205191016891" title="סוף הנחלה">
 <pre>[img[https://lut.im/htVbJVPVht/hdx92FbCD14xkJnm.jpg]]
