--- a/index.html
+++ b/index.html
@@ -8219,7 +8219,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="מיזונפלציה אלה נדיה [[האחיות כהן]]" title="$:/StoryList">
+<div list="גורה מיזונפלציה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8658,11 +8658,11 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161026214951927" modified="20170329225208139" tags="[[נאמני הגנזך]]" title="גורה">
+<div created="20161026214951927" modified="20170330181354355" tags="[[נאמני הגנזך]]" title="גורה">
 <pre>[img[https://lut.im/jwd9ttNALI/VOYeMadgknrTKN6D.jpg]]
 
 !!![[יויו]]:
-
+p
 גורה אחותי היא בייב בהכחשה/בילבי בת-גרב.
 
 
@@ -9434,8 +9434,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 [img[https://lut.im/sSu3JQWm5C/UODl0NUHJe49zN3L.jpg]]</pre>
 </div>
 <div created="20170112193700442" modified="20170330001135924" title="נדיה">
-<pre>
-[img[https://lut.im/YyOg51XGfA/nDjOjcd5qoNrHdfU.jpg]]
+<pre>[img[https://lut.im/YyOg51XGfA/nDjOjcd5qoNrHdfU.jpg]]
 
 !!![[יויו]]:
 
