--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@ Error message and password prompt
 
 <li>$:/state/Excise/-392760529/new-title</li>
 
+<li>$:/state/folded/English</li>
+
 <li>$:/state/folded/ברוכים הבאים</li>
 
 <li>$:/state/folded/המעבדה</li>
-
-<li>$:/state/folded/English</li>
 
 <li>$:/state/Link/--15630481/search</li>
 
@@ -220,6 +220,18 @@ Error message and password prompt
 <li>$:/UploadName</li>
 
 <li>$:/UploadURL</li>
+
+<li>bg</li>
+
+<li>Draft of 'האחיות כהן'</li>
+
+<li>English</li>
+
+<li>HH</li>
+
+<li>MyStyles</li>
+
+<li>RTLStylesheet</li>
 
 <li>אהבה</li>
 
@@ -277,9 +289,9 @@ Error message and password prompt
 
 <li>האומנית</li>
 
-<li>האחיות כהן</li>
-
 <li>האחיות K</li>
+
+<li>האחיות כהן</li>
 
 <li>הברמנית</li>
 
@@ -410,16 +422,6 @@ Error message and password prompt
 <li>תרבות הממשל היפנית</li>
 
 <li>תשבץ למאומנים</li>
-
-<li>bg</li>
-
-<li>English</li>
-
-<li>HH</li>
-
-<li>MyStyles</li>
-
-<li>RTLStylesheet</li>
 
 </ul>
 </p>
@@ -8171,13 +8173,13 @@ Error message and password prompt
 <div created="20161026202105658" modified="20161026202107028" title="$:/state/Excise/-392760529/new-title">
 <pre>הדירה</pre>
 </div>
+<div created="20161024125402340" modified="20161024125404684" title="$:/state/folded/English">
+<pre>show</pre>
+</div>
 <div created="20161024121359650" modified="20161024121402274" title="$:/state/folded/ברוכים הבאים">
 <pre>show</pre>
 </div>
 <div created="20161219171744217" modified="20161219171751648" title="$:/state/folded/המעבדה">
-<pre>show</pre>
-</div>
-<div created="20161024125402340" modified="20161024125404684" title="$:/state/folded/English">
 <pre>show</pre>
 </div>
 <div created="20161112214624841" modified="20161112214653371" title="$:/state/Link/--15630481/search">
@@ -8219,7 +8221,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="גורה מיזונפלציה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[Draft of 'האחיות כהן']]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8371,6 +8373,122 @@ Error message and password prompt
 </div>
 <div created="20161025191935600" modified="20161025192000859" title="$:/UploadURL">
 <pre>https://zzzen.com/cohen-sisters/store.php</pre>
+</div>
+<div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
+<pre></pre>
+</div>
+<div created="20161111215423587" draft.of="האחיות כהן" draft.title="האחיות כהן" modified="20170331105803048" title="Draft of 'האחיות כהן'">
+<pre>[img[pictures/K86u1tbSHje03L3Y.jpg]]
+
+
+
+!!![[יויו]]:
+
+שלום רב,
+
+בדצמבר 2016, עשרה ימים לאחר שנכנסנו, גורה דןדן ואני ל[[דירה|הדירה]], ארחנו חברים ל[[ארוחת כריסמס]]. זו הייתה ארוחה פנטסטית א-לה-דובונאז'. אני בעיקר זוכר את עצמי עומד מתנדנד ומבסוט על עצמי בשגעון.
+
+כדברי פתיחה, אני מעתיק לכאן את הקטע בו אווה מתארת אותי עומד שם ונואם בפני חברי ב[[כוכב המשאלות בעל תשע הצלעות]]:
+
+לפני די הרבה שנים, 13-14 שנים, הייתה לי כזו... תקופה. הייתי סטלן אימים, וללא קשר, תמיד אהבתי להמציא. אחד מהדברים שהמצאתי אז הוא, שאני אישה הונגריה בסיסית, ששמה [[אווה כהן]], ובעצם מבחינתי הייתי אחותם של האחים [[איתן וג'ואל כהן]], למרות שבכלל יואל הוא שם אבי ובכלל אין לי אחים כי אם ארבע אחיות, ממש כמו ל[[דוקטור דרק שפרד|https://en.wikipedia.org/wiki/Derek_Shepherd#/media/File:Dr._Derek_Shepherd.jpgD7.AA_.D7.91.D7.A1.D7.93.D7.A8.D7.94]]. הרעיון נשאר אתי והמשיך להתפתח, ועם הזמן החלטתי, שאני רוצה להקים קבוצת יצירה ליוצרים בלתי תלויים זה בזה אך קשורים זה לזה ושמה ''האחיות כהן''. שיתפתי בזה את [[גורה]] אחותי הקטנה והיפה. גורה ואני ישבנו ימים ולילות רבים, ופתחנו את האג'נדה והדמויות, את הקונספט והדרמה. כתבנו [[תשתית לסדרה|HH]] בת שמונה פרקים על האחיות עם אפשרות להמשך.. ולמה אני מספר לכם את זה? כי כשהגעתי לדירה כבר הבנתי שזהו מתקן השיגור של האחיות, ולכן בניתי את [[המעבדה]] בחדר השינה שלי. ועכשיו לדבר עצמו. אני מזמין כל אחד ואחת מכם להצטרף לחבורה. תנאי בסיסי לכניסת מיזם לתחומי האחיות הוא ש-[[שרלה הייתה אוהבת את זה]]. מי זו שרלה? שרלה היא אישה שנפטרה מסרטן במח, כמו ש[[מאיר אריאל]] מספר בסרט [[מסע הבחירות של מאיר אריאל|https://www.youtube.com/watch?v=yFXUEoXCkT8]],  (5:30 דקות מתחילת הסרט), על האישה שנלקחה צעירה והיה לה ראש מאד מעניין והלוואי והיא הייתה המורה לספרות שלו. הוא מספר על צחוקיה המשגעים והחכמים ביותר ועל הצורך שחש לכתוב לה משהו של פרידה ביום השלושים לפטירתה, משהו כמו שיר אהבה למורתו שאף היה מבקש ממנה ציון עליו. ומי מחליט אם שרלה שהלכה לעולמה הייתה [[אוהבת|אהבה]] את זה או לא? הדבר התמים שאני שואף אליו הוא שלעולם לא אצטרך לנהוג כ[[פוליטיקאי]] או מי מחברי האחיות, כי אני בטוח שאת זה שרלה לא הייתה אוהבת. 
+
+או כמו שגורה ואני כתבנו בשעתו, כשגרתי [[בין האלונים|המעבדה]].
+
+
+[[שאלון האחיות]]
+
+היו טובים.
+
+
+
+
+
+</pre>
+</div>
+<div created="20161024110225652" modified="20161024125352292" tags="LTR" title="English">
+<pre>This item is in English.
+
+You see it written left to right because it is tagged `LTR` (uppercase).
+
+@@.rtl
+גם בדף כזה אפשר להכניס פיסקה מימין לשמאל.
+@@</pre>
+</div>
+<div created="20161024200912852" modified="20161217141129998" tags="" title="HH">
+<pre>! Happy Hour
+
+!!![[גורה: שוב, כאן כעת 2016, משחררת ממה שכתבנו בשנים הראשונות של המילניום הנוכחי]]:
+
+[img[pictures/xKgon0fjgyGD8PSb.JPG]]
+
+שמונה פרקים המתארים את המתרחש בחיי עובדי,דיירי ועוברי האורח שבבניין, כאשר הוא מתמקד בעיקר בתשע נשים שעובדות בו וב[[שלום]]. כמו כן ישנן דמויות משנה קבועות ודמויות אורחות.
+במהלך הזמן יתברר מן המתרחש, שתשע הנשים &quot;מחולקות&quot; ל-&quot;שני מחנות&quot;. המחנות אינם מוגדרים ככאלה, אלא הם תוצר של המציאות. (המדומה) .
+המצלמה היא זו שמספרת את הסיפור בתוך שמסיירת בין קומות וחדרי הבניין, וברחובות העיר הסמוכים לו עד ל[[מרינה זוטו]] שלחופי [[ים טתיס]]. 
+היא מסתכלת בעין אוהבת על שלום,[[הברמנית]], [[מוכרת הדיסקים/dj]], [[הספרית]], [[הספנית]], ו[[המסאז'יסטית]]. (להלן האחיות כהן).
+ובוחנת בחשדנות את [[האומנית]], [[אשת העסקים]], [[עורכת הדין]] ו[[היועצת]], (להלן [[האחיות K]] ).
+אל האחיות K מצטרפת מידי פעם אחות K מתחלפת המפרה את השגרה בבניין. האחות K המתחלפת יכולה להיות גבר, אישה, או כל יצור חי אחר. לשיטת [[המצלמה]] כל טיפוס יכול להפוך לאחות לרגעים או באופן קבוע.
+
+בפרקים הראשונים, אל תוך חייהן של הדמויות הקיימות מגיעה אחות K חמישית, בדמותה של [[סוחרת אומנות|אודליה]], המנסה לשאת חן בעיני שלום, ולגזול מכספו. היא משתכנת בהוסטל שבקומה הרביעית, ומנסה לכבוש את ליבו של הנ&quot;ל. היא מגלה שאל העיר הגיע  האדם ששלח אותה למשימת הפיתוי, שהוא עורך דין שמן ומיוזע ,EA שמו,שלובש גם הוא דמות של סוחר אומנות בכדי לעקוב אחרי אודליה. בנוסף לכך אודליה מגלה, שאחיה הסורר אף הוא הגיע לעיר במנוסתו מהמשטרה במדינה ממנה הגיעו.
+מאוחר יותר יתחבא אחיה של אודליה במרתף הבניין, שם ימצא אותו [[סטלין]], השרת ואיש התחזוקה של הבניין.
+המזימה נחשפת בעיקר על ידי האחיות C (בתחכום ובחן רבים )?
+למעשה, כל שוכני הבניין, כולל אנשי [[מערכת העיתון]], אנשי [[ההוסטל]] וכו' תורמים לפתרון העלילה.
+בהמשך, תוך כדי פתרון העלילה כבר מתרקמת עלילה עתידית שחלקה סכסוכים בין הדמויות הקבועות, בעיות אישיות מחייהן הפרטיים של אותן דמויות, דמויות נוספות של עוברים ושבים וכו'.
+אורכו של כל פרק כארבעים דקות, ולרוב מסתיים ב HAPPY HOUR   מסורתי, שעה של משקאות, [[אנט ג'מיימה]], שמחה וכיופים ב[[&quot;קפה מילר &quot;|קפה מילר]].
+</pre>
+</div>
+<div created="20161024053448116" modified="20161111214302931" tags="$:/tags/Stylesheet LTR" title="MyStyles" type="text/css">
+<pre>.left { text-align: left }
+.center { text-align: center }
+.right { text-align: right }
+.ltr { direction: ltr }
+.rtl,
+.tc-edit-texteditor,
+.tc-tiddler-preview-preview { direction: rtl }</pre>
+</div>
+<div created="20161023181104390" modified="20161113204648316" tags="$:/tags/Stylesheet LTR" title="RTLStylesheet" type="text/css">
+<pre>.tc-tiddler-title,
+.tc-tags-wrapper,
+.tc-tiddler-body,
+.tc-site-title,
+.tc-site-subtitle,
+.tc-timeline
+{
+    direction: rtl;
+}
+
+.tc-timeline
+{
+    text-align: left
+}
+
+.tc-site-title,
+.tc-site-subtitle
+{
+    padding-right: 8px
+}
+
+.tc-tiddler-frame .tc-tiddler-controls {
+    float: left;
+}
+
+/* tag a tiddler LTR (in uppercase) for left-to-right writing direction */
+
+.tc-tagged-LTR .tc-tiddler-title,
+.tc-tagged-LTR .tc-tags-wrapper,
+.tc-tagged-LTR .tc-tiddler-body,
+.tc-tiddler-system .tc-tiddler-title,
+.tc-tiddler-system .tc-tags-wrapper,
+.tc-tiddler-system .tc-tiddler-body
+{
+    direction: ltr;
+}
+
+.tc-tiddler-frame.tc-tagged-LTR .tc-tiddler-controls,
+.tc-tiddler-frame.tc-tiddler-system .tc-tiddler-controls
+
+{
+    float: right;
+}</pre>
 </div>
 <div created="20170112164936113" modified="20170125144039872" title="אהבה">
 <pre>[img[pictures/BH4qXOjJYFFQ2a7G.jpg]]
@@ -8830,6 +8948,14 @@ Error message and password prompt
 
 </pre>
 </div>
+<div created="20170320161241857" modified="20170320161743056" title="האחיות K">
+<pre>[img[pictures/SX0Kp0WyaOlQqidh.jpg]]
+
+!!![[גורה]]:
+
+האחיות כן הן החתולות השורטות ב-[[HAPPY HOUR|HH]].
+</pre>
+</div>
 <div created="20161111215423587" modified="20170327191629645" title="האחיות כהן">
 <pre>[img[pictures/K86u1tbSHje03L3Y.jpg]]
 
@@ -8856,14 +8982,6 @@ Error message and password prompt
 
 
 
-</pre>
-</div>
-<div created="20170320161241857" modified="20170320161743056" title="האחיות K">
-<pre>[img[pictures/SX0Kp0WyaOlQqidh.jpg]]
-
-!!![[גורה]]:
-
-האחיות כן הן החתולות השורטות ב-[[HAPPY HOUR|HH]].
 </pre>
 </div>
 <div created="20161217141221233" modified="20170103181159486" title="הברמנית">
@@ -10004,94 +10122,6 @@ Fapina''
 | | | |M|ס| |
 | | | |A| |נ|
 | | | |N|O|S|</pre>
-</div>
-<div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
-<pre></pre>
-</div>
-<div created="20161024110225652" modified="20161024125352292" tags="LTR" title="English">
-<pre>This item is in English.
-
-You see it written left to right because it is tagged `LTR` (uppercase).
-
-@@.rtl
-גם בדף כזה אפשר להכניס פיסקה מימין לשמאל.
-@@</pre>
-</div>
-<div created="20161024200912852" modified="20161217141129998" tags="" title="HH">
-<pre>! Happy Hour
-
-!!![[גורה: שוב, כאן כעת 2016, משחררת ממה שכתבנו בשנים הראשונות של המילניום הנוכחי]]:
-
-[img[pictures/xKgon0fjgyGD8PSb.JPG]]
-
-שמונה פרקים המתארים את המתרחש בחיי עובדי,דיירי ועוברי האורח שבבניין, כאשר הוא מתמקד בעיקר בתשע נשים שעובדות בו וב[[שלום]]. כמו כן ישנן דמויות משנה קבועות ודמויות אורחות.
-במהלך הזמן יתברר מן המתרחש, שתשע הנשים &quot;מחולקות&quot; ל-&quot;שני מחנות&quot;. המחנות אינם מוגדרים ככאלה, אלא הם תוצר של המציאות. (המדומה) .
-המצלמה היא זו שמספרת את הסיפור בתוך שמסיירת בין קומות וחדרי הבניין, וברחובות העיר הסמוכים לו עד ל[[מרינה זוטו]] שלחופי [[ים טתיס]]. 
-היא מסתכלת בעין אוהבת על שלום,[[הברמנית]], [[מוכרת הדיסקים/dj]], [[הספרית]], [[הספנית]], ו[[המסאז'יסטית]]. (להלן האחיות כהן).
-ובוחנת בחשדנות את [[האומנית]], [[אשת העסקים]], [[עורכת הדין]] ו[[היועצת]], (להלן [[האחיות K]] ).
-אל האחיות K מצטרפת מידי פעם אחות K מתחלפת המפרה את השגרה בבניין. האחות K המתחלפת יכולה להיות גבר, אישה, או כל יצור חי אחר. לשיטת [[המצלמה]] כל טיפוס יכול להפוך לאחות לרגעים או באופן קבוע.
-
-בפרקים הראשונים, אל תוך חייהן של הדמויות הקיימות מגיעה אחות K חמישית, בדמותה של [[סוחרת אומנות|אודליה]], המנסה לשאת חן בעיני שלום, ולגזול מכספו. היא משתכנת בהוסטל שבקומה הרביעית, ומנסה לכבוש את ליבו של הנ&quot;ל. היא מגלה שאל העיר הגיע  האדם ששלח אותה למשימת הפיתוי, שהוא עורך דין שמן ומיוזע ,EA שמו,שלובש גם הוא דמות של סוחר אומנות בכדי לעקוב אחרי אודליה. בנוסף לכך אודליה מגלה, שאחיה הסורר אף הוא הגיע לעיר במנוסתו מהמשטרה במדינה ממנה הגיעו.
-מאוחר יותר יתחבא אחיה של אודליה במרתף הבניין, שם ימצא אותו [[סטלין]], השרת ואיש התחזוקה של הבניין.
-המזימה נחשפת בעיקר על ידי האחיות C (בתחכום ובחן רבים )?
-למעשה, כל שוכני הבניין, כולל אנשי [[מערכת העיתון]], אנשי [[ההוסטל]] וכו' תורמים לפתרון העלילה.
-בהמשך, תוך כדי פתרון העלילה כבר מתרקמת עלילה עתידית שחלקה סכסוכים בין הדמויות הקבועות, בעיות אישיות מחייהן הפרטיים של אותן דמויות, דמויות נוספות של עוברים ושבים וכו'.
-אורכו של כל פרק כארבעים דקות, ולרוב מסתיים ב HAPPY HOUR   מסורתי, שעה של משקאות, [[אנט ג'מיימה]], שמחה וכיופים ב[[&quot;קפה מילר &quot;|קפה מילר]].
-</pre>
-</div>
-<div created="20161024053448116" modified="20161111214302931" tags="$:/tags/Stylesheet LTR" title="MyStyles" type="text/css">
-<pre>.left { text-align: left }
-.center { text-align: center }
-.right { text-align: right }
-.ltr { direction: ltr }
-.rtl,
-.tc-edit-texteditor,
-.tc-tiddler-preview-preview { direction: rtl }</pre>
-</div>
-<div created="20161023181104390" modified="20161113204648316" tags="$:/tags/Stylesheet LTR" title="RTLStylesheet" type="text/css">
-<pre>.tc-tiddler-title,
-.tc-tags-wrapper,
-.tc-tiddler-body,
-.tc-site-title,
-.tc-site-subtitle,
-.tc-timeline
-{
-    direction: rtl;
-}
-
-.tc-timeline
-{
-    text-align: left
-}
-
-.tc-site-title,
-.tc-site-subtitle
-{
-    padding-right: 8px
-}
-
-.tc-tiddler-frame .tc-tiddler-controls {
-    float: left;
-}
-
-/* tag a tiddler LTR (in uppercase) for left-to-right writing direction */
-
-.tc-tagged-LTR .tc-tiddler-title,
-.tc-tagged-LTR .tc-tags-wrapper,
-.tc-tagged-LTR .tc-tiddler-body,
-.tc-tiddler-system .tc-tiddler-title,
-.tc-tiddler-system .tc-tags-wrapper,
-.tc-tiddler-system .tc-tiddler-body
-{
-    direction: ltr;
-}
-
-.tc-tiddler-frame.tc-tagged-LTR .tc-tiddler-controls,
-.tc-tiddler-frame.tc-tiddler-system .tc-tiddler-controls
-
-{
-    float: right;
-}</pre>
 </div>
 
 </div>
