--- a/index.html
+++ b/index.html
@@ -8225,7 +8225,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כל המתכונים של ארוחת הכריסמס]] יויו [[דפני אברואה]] [[ג'וזף אברואה]] מריאן אלפרד סוניה מרק אלכסנדרה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[תשבץ למאומנים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8245,7 +8245,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170331210413407" title="$:/temp/search">
+<div created="20161023184814872" modified="20170331214821780" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10030,19 +10030,19 @@ Fapina''
 
 //המשך יבוא//</pre>
 </div>
-<div created="20161026110100007" modified="20161026110144363" tags="" title="תשבץ למאומנים">
-<pre>| | | |נ| | |
-| | | |ח| | |
-| | | |מ| | |
-| | | |נ| | |
-| | | |מ| | |
-|מ| | |א| | |
-| |ל| |ו| | |
-| | |ו|נ| | |
-| | | |כ| | |
-| | | |M|ס| |
-| | | |A| |נ|
-| | | |N|O|S|</pre>
+<div created="20161026110100007" modified="20170331214812646" tags="" title="תשבץ למאומנים">
+<pre>|&amp;#9608;|&amp;#9608;|&amp;#9608;|נ|&amp;#9608;|&amp;#9608;|
+|&amp;#9608;|&amp;#9608;|&amp;#9608;|ח|&amp;#9608;|&amp;#9608;|
+|&amp;#9608;|&amp;#9608;|&amp;#9608;|מ|&amp;#9608;|&amp;#9608;|
+|&amp;#9608;|&amp;#9608;|&amp;#9608;|נ|&amp;#9608;|&amp;#9608;|
+|&amp;#9608;|&amp;#9608;|&amp;#9608;|מ|&amp;#9608;|&amp;#9608;|
+|מ|&amp;#9608;|&amp;#9608;|א|&amp;#9608;|&amp;#9608;|
+|&amp;#9608;|ל|&amp;#9608;|ו|&amp;#9608;|&amp;#9608;|
+|&amp;#9608;|&amp;#9608;|ו|נ|&amp;#9608;|&amp;#9608;|
+|&amp;#9608;|&amp;#9608;|&amp;#9608;|כ|&amp;#9608;|&amp;#9608;|
+|&amp;#9608;|&amp;#9608;|&amp;#9608;|M|ס|&amp;#9608;|
+|&amp;#9608;|&amp;#9608;|&amp;#9608;|A|&amp;#9608;|נ|
+|&amp;#9608;|&amp;#9608;|&amp;#9608;|N|O|S|</pre>
 </div>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
