איריס הבת, גיגי, קרן, תומר וגם.

--- a/index.html
+++ b/index.html
@@ -235,6 +235,8 @@ Error message and password prompt
 
 <li>איריס</li>
 
+<li>איריס הבת</li>
+
 <li>אלה</li>
 
 <li>אלכסנדרה</li>
@@ -260,6 +262,8 @@ Error message and password prompt
 <li>גואן יין</li>
 
 <li>גורה</li>
+
+<li>גיגי</li>
 
 <li>גלות</li>
 
@@ -395,6 +399,8 @@ Error message and password prompt
 
 <li>קפה מילר</li>
 
+<li>קרן</li>
+
 <li>ראשל</li>
 
 <li>רוז'ה</li>
@@ -416,6 +422,8 @@ Error message and password prompt
 <li>שלח</li>
 
 <li>שרלה הייתה אוהבת את זה</li>
+
+<li>תומר</li>
 
 <li>תרבות הממשל היפנית</li>
 
@@ -8229,7 +8237,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8249,7 +8257,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170401161744093" title="$:/temp/search">
+<div created="20161023184814872" modified="20170401234043030" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8433,7 +8441,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161215192348716" modified="20170401162057765" title="אווה כהן">
+<div created="20161215192348716" modified="20170401233029264" title="אווה כהן">
 <pre>[img[pictures/7h68QEIPyKEHEZ8B.jpg]]
 
 
@@ -8442,7 +8450,7 @@ Error message and password prompt
 
 מכל האנשים שהגיעו אלינו, הסיפור עם אווה הוא המוזר ביותר ולא בגללה, כי אם בגלל שיויו, שבאותה תקופה גר בשוק הפשפשים ביפו, ונהג לשתות קפה אצל [[פועה]], פשוט פנה יום אחד אל אווה, שהייתה קונדיטורית שם, ושאל אותה אם הוא יכול לדבר איתה. תוך כמה דקות מרגע תחילת פגישתם הראשונה הוא סיפר לה עלי ועליו כפי שמסופר בסיפור הראשון ב&quot;אגב בתוך אגב&quot;. 
 
-אווה היא אישה בת 51 כמעט, נכון לעכשיו, יש לה בת בת כמעט 21 ששמה איריס, ובארוחת כריסמס של לפני שנה כמעט, היא נפגשה עם [[ד&quot;ר פיליפ לומבר|פיליפ]], הפסיכיאטר שלי, אותו אהבה מאז הייתה בת עשרים ומשהו והוא אותה.
+אווה היא אישה בת 51 כמעט, נכון לעכשיו, יש לה בת בת כמעט 21 ששמה [[איריס|איריס הבת]], ובארוחת כריסמס של לפני שנה כמעט, היא נפגשה עם [[ד&quot;ר פיליפ לומבר|פיליפ]], הפסיכיאטר שלי, אותו אהבה מאז הייתה בת עשרים ומשהו והוא אותה.
 
 
 אני מאז אותה הארוחה, איבדתי את דןדן, אבל לא זה המקום לדבר על זה, ואני כבר יותר טוב.
@@ -8482,16 +8490,23 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170201204950366" modified="20170211163957552" title="איריס">
+<div created="20170201204950366" modified="20170401233123732" title="איריס">
 <pre>[img[pictures/SolDw2CExA3H9JHF.jpg]]
 
 
 
 בפינה הזו של המטבח של הנחלה, איריס הייתה יושבת בסוף כל יום עבודה, ומעשנת שלוש-ארבע סיגריות בזו אחר זו ובוהה.
 
-איריס היא אותה אישה נפלאה, שלימדה אותי לעבוד במטבח, שלימדה אותי לאפות, שהייתה לי כאם, שעזרה לי לנוס מן הנחלה ושאת שמה נתתי לבתי.
+איריס היא אותה אישה נפלאה, שלימדה אותי לעבוד במטבח, שלימדה אותי לאפות, שהייתה לי כאם, שעזרה לי לנוס מן הנחלה ושאת שמה נתתי [[לבתי|איריס הבת]].
 
 </pre>
+</div>
+<div created="20170401233133830" modified="20170401234034333" title="איריס הבת">
+<pre>[img[pictures/iris-habat.jpg]]
+
+!!![[גורה]]:
+
+איריס בתה של אווה, היא ילדה זרחנית. זורחת באור ובחושך.</pre>
 </div>
 <div created="20161115182456203" modified="20170401163845219" title="אלה">
 <pre>[img[pictures/BaIAkKdSidrY1gLE.jpg]]
@@ -8681,7 +8696,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20161026214951927" modified="20170330181744441" tags="[[נאמני הגנזך]]" title="גורה">
+<div created="20161026214951927" modified="20170401203054665" tags="[[נאמני הגנזך]]" title="גורה">
 <pre>[img[pictures/VOYeMadgknrTKN6D.jpg]]
 
 !!![[יויו]]:
@@ -8693,8 +8708,19 @@ Error message and password prompt
 
 את התמונה הזאת מצאתי זרוקה בפח שליד המייבש הכביסה. כן, היא אמרה לי שכבר כמה ימים היא מנסה לצייר את עצמה אבל לא הולך לה.
 
+היא בת הזקונים להורי, דינה ז&quot;ל ויואל שיבדל&quot;ח, שהולידו את חמישתנו: [[נדיה]], [[קרן]], [[אותי|יויו]], את [[גיגי]] ואת הגורה.
+
 
 מהרגע שפתחתי את [[האתר הזה|האחיות כהן]], [[היא לא מפסיקה לכתוב|הכתיבה]], ממלאה ומעטרת ומשתדלת להתנהג כיאות.</pre>
+</div>
+<div created="20170401203113923" modified="20170401214833936" title="גיגי">
+<pre>[img[pictures/gigi.jpg]]
+
+!!![[יויו]]:
+
+גיגי היא חברה באימן. היא גרה בהוד השרון, והיא משתייכת לקהילה המשונה הזו. יש לה שני חתולים ולברדורית לבנה. יש לה בית עם גינה, היא מורה בבית ספר יסודי, מחנכת וכל זה. היא חמודה נורא, היא נשמה והיא נורא עצובה, ככה גורה ואני קוראים לה באהבה גמורה, העצובה. בתיכון היו לה המוני פצעים על הפנים, היא התכנסה בתוך עצמה, הייתה ממושמעת כך שמעולם לא היה על מה להלין בעניינה, היא הייתה סימפטית, ומאז היא מן חוקרת כזו, תמיד לומדת עוד ועוד. היו לה כמה רומנים רציניים בחיים, עם גברים שווים דווקא, אך היא חיה עם הקהילה שממלאה את חייה ככל הנראה.
+
+</pre>
 </div>
 <div created="20170105170620001" modified="20170324124358125" title="גלות">
 <pre>[img[pictures/fFaOMg4QGdKACzmA.jpg]]
@@ -9215,7 +9241,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 היא אוהבת ודואגת לכולנו. בסוף כל יום עבודה היא עוברת ובודקת שהכל במקום. היא סומכת על כולנו ובכל זאת במהירות היא מציצה לכל הפינות למרות שהיא יודעת שהסמרטוטים שבידינו לא יפספסו אף סמ&quot;ר. ואולי, פתאום אני חושב, היא פשוט רווה נחת ברגעים הללו, אחרי שסיימה לספור את  הקופה, ולדעת שלא לחינם למדה ראיית חשבון.</pre>
 </div>
-<div created="20161026214908307" modified="20170331212158711" tags="[[נאמני הגנזך]]" title="יויו">
+<div created="20161026214908307" modified="20170401202755620" tags="[[נאמני הגנזך]]" title="יויו">
 <pre>!!![[אירי]]:
 
 [img[pictures/yoyo.jpg]]
@@ -9722,6 +9748,15 @@ Fapina''
 
 </pre>
 </div>
+<div created="20170401220808061" modified="20170401221320005" title="קרן">
+<pre>[img[pictures/keren.jpg]]
+
+!!![[יויו]]:
+
+כנערה קרן הייתה הרקדנית השמורה והמטופחת של אימא ואבא, אך היום היא בת 42, נשואה, ואם לשלושה.
+
+הם גרים בקיבוץ בערבה והיא מתפרנסת מאריגת שטיחים צבעוניים, על נולים ענקיים, מרצועות טריקו צבעוניות.</pre>
+</div>
 <div created="20170401150113960" modified="20170401151207597" title="ראשל">
 <pre>[img[pictures/rachel.jpg]]
 
@@ -9812,8 +9847,8 @@ Fapina''
 
 </pre>
 </div>
-<div created="20161213210419446" modified="20170401172048654" title="שאלון האחיות">
-<pre>[img[pictures/bzwMSqRggRrX7rNY.JPG]]
+<div created="20161213210419446" modified="20170401223041533" title="שאלון האחיות">
+<pre>[img[pictures/sheelon-haachayot.JPG]]
 
 !!![[גורה]]:
 
@@ -10051,6 +10086,17 @@ Fapina''
 העשב נוצץ.
 שד מתרוצץ.
 הרוח בעץ.
+</pre>
+</div>
+<div created="20170401223255295" modified="20170401230638882" title="תומר">
+<pre>[img[pictures/tomer.jpg]]
+
+!!![[יויו]]:
+
+כשבאנו מפריז, אחרי שאימא שלי נפטרה, ואבא סיפר לי שיש לו חברה כבר שנים, והייתי מחוסל, תומר לקח אותי לסלע שמעל הים עם בקבוק ויסקי.
+
+אנחנו יחד מהגנון.
+
 </pre>
 </div>
 <div created="20161026221719159" modified="20170401171255749" tags="" title="תרבות הממשל היפנית">
