--- a/index.html
+++ b/index.html
@@ -8237,7 +8237,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[שאלון האחיות]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9847,8 +9847,8 @@ Fapina''
 
 </pre>
 </div>
-<div created="20161213210419446" modified="20170401223041533" title="שאלון האחיות">
-<pre>[img[pictures/sheelon-haachayot.JPG]]
+<div created="20161213210419446" modified="20170401234906427" title="שאלון האחיות">
+<pre>[img[pictures/sheelon-haachayot.jpg]]
 
 !!![[גורה]]:
 
