--- a/index.html
+++ b/index.html
@@ -8237,7 +8237,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[שאלון האחיות]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="תומר [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10088,14 +10088,14 @@ Fapina''
 הרוח בעץ.
 </pre>
 </div>
-<div created="20170401223255295" modified="20170401230638882" title="תומר">
+<div created="20170401223255295" modified="20170401235829252" title="תומר">
 <pre>[img[pictures/tomer.jpg]]
 
 !!![[יויו]]:
 
-כשבאנו מפריז, אחרי שאימא שלי נפטרה, ואבא סיפר לי שיש לו חברה כבר שנים, והייתי מחוסל, תומר לקח אותי לסלע שמעל הים עם בקבוק ויסקי.
+כשבאנו מפריז להלוויה של אימא שלנו, גורה ואני, ומיד אחר כך אבא סיפר לי שיש לו חברה כבר שנים, והייתי מחוסל, תומר לקח אותי לסלע שמעל הים עם בקבוק ויסקי.
 
-אנחנו יחד מהגנון.
+אנחנו חברים מהגנון.
 
 </pre>
 </div>
