התחלת מתכונים, מרק כתום, דג לוקוס, אורז וצנוברים, מג'דרה.

--- a/index.html
+++ b/index.html
@@ -229,6 +229,8 @@ Error message and password prompt
 
 <li>אווה כהן</li>
 
+<li>אורז לבן עם צנוברים</li>
+
 <li>אימא, סבתא ואני</li>
 
 <li>אירי</li>
@@ -337,6 +339,8 @@ Error message and password prompt
 
 <li>כל המתכונים של ארוחת הכריסמס</li>
 
+<li>לוקוס בתנור</li>
+
 <li>לייף סטייל</li>
 
 <li>ליל הדובונאז'</li>
@@ -344,6 +348,8 @@ Error message and password prompt
 <li>לפתן חבושים</li>
 
 <li>מאיר אריאל</li>
+
+<li>מג'דרה</li>
 
 <li>מה שבאמת קרה בארוחת כריסמס</li>
 
@@ -362,6 +368,8 @@ Error message and password prompt
 <li>מרינה זוטו</li>
 
 <li>מרק</li>
+
+<li>מרק כתום בסיר גדול</li>
 
 <li>נדיה</li>
 
@@ -8237,7 +8245,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="תומר [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כל המתכונים של ארוחת הכריסמס]] מג'דרה" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8458,6 +8466,26 @@ Error message and password prompt
 קצרה היריעה מלספר על אווה, מה גם שהיא עצמה כתבה לא מעט בגנזך.
 
 לאחרונה אירי, אווה ואני עובדות יחד על [[אימא, סבתא ואני]], סיפורים מאת דנה הבובה, על חייה עם איריס, ביתה של אווה ואווה.</pre>
+</div>
+<div created="20170402173414658" modified="20170402174754742" title="אורז לבן עם צנוברים">
+<pre>
+[img[pictures/orez-lavan-matconim.jpg]]
+
+!!![[גורה]]:
+
+בסיר של שני ליטרים שמים, כף שמן צמחי וכוס אורז, ומטגנים אותו מעט מעל להבה בינונית.
+ 
+מוסיפים שתי כוסות מים חמים, חצי כפית מלח ים גס, שתי כפות סויה, ומבשלים על אש נמוכה רבע שעה-עשרים דקות. (או עד שהאורז נראה יבש ונפערות בו מערבולות קטנות.)
+
+בזמן שהאורז מתבשל קולים חצי כוס צנובריםבתנור או על מחבת.
+
+מכבים את האורז ונותנים לו לעמוד עשר דקות.
+
+כעבור עשר דקות &quot;פותחים&quot; אותו בערבוב קל.  סוגרים שוב את המכסה ומשאירים את הסיר סגור לעשר דקות נוספות.
+
+לאחר העשרים דקות האורז מוכן להגשה.
+
+את הצנוברים הקלויים מפזרים מעל, ואפשר לפזר גם עשבי תיבול קצוצים.</pre>
 </div>
 <div created="20170301155222124" modified="20170301155811140" title="אימא, סבתא ואני">
 <pre>[img[pictures/PrYBW9yDkBFFqCB6.jpg]]
@@ -9278,8 +9306,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שיטת אבחון פסיכולוגי בעזרת מדע כף היד, שפותחה על ידי [[ד&quot;ר ארנולד הולצמן|http://www.kafyeda.co.il/document/81,53,17.aspx]].</pre>
 </div>
-<div created="20161114205035106" modified="20170331212402755" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
+<div created="20161114205035106" modified="20170402140910735" tags="[[מתכוני ארוחת הכריסמס]]" title="כל המתכונים של ארוחת הכריסמס">
 <pre>[img[pictures/christmas-dinner.jpg]]
+
+
+!!![[גורה]]:
+
+טוב, בינתיים ממש לא כולם אבל אני בדרך לשם, וכידוע, הדרך היא החשובה.
+
+
 
 * [[מרק כתום בסיר גדול]] - יויו 
 * [[הדג|לוקוס בתנור]] לאפייה שתתבצע רק זמן קצר לפני הארוחה - יויו 
@@ -9318,6 +9353,19 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * [[ריגו יאנצ'י]] - סוניה     
 
 </pre>
+</div>
+<div created="20170402165550173" modified="20170402172249911" title="לוקוס בתנור">
+<pre>[img[pictures/dag-matconim.jpg]]
+
+!!![[יויו]]:
+
+קונים חתיכה יפה של דג לוקוס טרי ביום ההכנה.
+
+מכינים רוטב מכוס שמן זית, שני חופנים או שלושה של עשבי תיבול קצוצים, שתי שיני שום קצוצות או כתושות.
+
+מורחים היטב את הכמות כולה ובצורה אחידה מסביב לדג כולו, ומניחים אותו בתבנית מרופדת בנייר אלומיניום פתוח כך שאפשר יהיה לעטוף אותו למשך האפייה.
+
+פותחים חתכים עם סכין בגב הדג, מפזרים מעל הדג מלח ים גס ופלפל שחור גרוס, עוטפים בנייר האלומינום, ואופים בתנור שחומם מראש ל-180 מעלות צלזיוס עשרים- עשרים וחמש דקות.</pre>
 </div>
 <div created="20161114183334957" modified="20161114184053461" title="לייף סטייל">
 <pre></pre>
@@ -9360,6 +9408,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 עצמי עונה לי בהגיענו אז נתחיל כל יום להתעמל 
 
 או במילים אחרות,  [[טרמינל לומינטל|https://www.youtube.com/watch?v=GME1UyUpMPU]].</pre>
+</div>
+<div created="20170402193858167" modified="20170402194046673" title="מג'דרה">
+<pre>
+[img[pictures/mejadra-matconim.jpg]]
+
+!!![[גורה]]:
+
+</pre>
 </div>
 <div created="20161114202954459" modified="20170401170034262" title="מה שבאמת קרה בארוחת כריסמס">
 <pre>[img[pictures/kie87qScl5HLeyVw.JPG]]
@@ -9490,6 +9546,33 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 !!![[גורה]]:
 
 מרק הוא גבר שבגברים, הוא בעלה ההונגרי של [[סוניה]] ההונגריה, והוא מתכנת מחשבים, שפדה את חובו ועשה אקזיט כדבעי.</pre>
+</div>
+<div created="20170402151609777" modified="20170402152829128" title="מרק כתום בסיר גדול">
+<pre>
+[img[pictures/marak-katom.jpg]]
+
+!!![[יויו]]:
+
+זה מאד קל.
+
+בסיר כבד וגדול, צולים במעט חמאה, שלוש בטטות בינוניות, ארבעה גזרים, שורש סלרי, שורש פטרוזיליה, זוקיני אחד שלוש עד חמש דקות.
+
+מוסיפים מים כדי כיסוי הירקות, ומבשלים שעה וחצי על אש נמוכה.
+
+מסירים מן האש, ומקררים לטמפרטורת החדר.
+
+טוחנים את הירקות, עד לקבלת מרק אחיד ומרתיחים שוב.
+
+מוסיפים לפי הטעם: מלח ים גס, פלפל שחור גרוס, אגוז מוסקט מגורר, ג'ינג'ר מגורר, חצי מיכל שמנת מתוקה וחצי כוס חלב, ומביאים לרתיחה.
+
+מנמיכים את הלהבה ומבשלים עוד עשרים דקות.
+
+טועמים ואם יש צורך מוסיפים מהתבלינים.
+
+מגישים עם עירית קצוצה.
+
+
+</pre>
 </div>
 <div created="20170112193700442" modified="20170330001135924" title="נדיה">
 <pre>[img[pictures/nDjOjcd5qoNrHdfU.jpg]]
