--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@ Error message and password prompt
 
 <li>$:/state/Excise/-392760529/new-title</li>
 
+<li>$:/state/folded/English</li>
+
 <li>$:/state/folded/ברוכים הבאים</li>
 
 <li>$:/state/folded/המעבדה</li>
-
-<li>$:/state/folded/English</li>
 
 <li>$:/state/Link/--15630481/search</li>
 
@@ -220,6 +220,16 @@ Error message and password prompt
 <li>$:/UploadName</li>
 
 <li>$:/UploadURL</li>
+
+<li>bg</li>
+
+<li>English</li>
+
+<li>HH</li>
+
+<li>MyStyles</li>
+
+<li>RTLStylesheet</li>
 
 <li>אהבה</li>
 
@@ -285,9 +295,9 @@ Error message and password prompt
 
 <li>האומנית</li>
 
-<li>האחיות כהן</li>
-
 <li>האחיות K</li>
+
+<li>האחיות כהן</li>
 
 <li>הברמנית</li>
 
@@ -436,16 +446,6 @@ Error message and password prompt
 <li>תרבות הממשל היפנית</li>
 
 <li>תשבץ למאומנים</li>
-
-<li>bg</li>
-
-<li>English</li>
-
-<li>HH</li>
-
-<li>MyStyles</li>
-
-<li>RTLStylesheet</li>
 
 </ul>
 </p>
@@ -8197,13 +8197,13 @@ Error message and password prompt
 <div created="20161026202105658" modified="20161026202107028" title="$:/state/Excise/-392760529/new-title">
 <pre>הדירה</pre>
 </div>
+<div created="20161024125402340" modified="20161024125404684" title="$:/state/folded/English">
+<pre>show</pre>
+</div>
 <div created="20161024121359650" modified="20161024121402274" title="$:/state/folded/ברוכים הבאים">
 <pre>show</pre>
 </div>
 <div created="20161219171744217" modified="20161219171751648" title="$:/state/folded/המעבדה">
-<pre>show</pre>
-</div>
-<div created="20161024125402340" modified="20161024125404684" title="$:/state/folded/English">
 <pre>show</pre>
 </div>
 <div created="20161112214624841" modified="20161112214653371" title="$:/state/Link/--15630481/search">
@@ -8236,8 +8236,8 @@ Error message and password prompt
 <div created="20161023184709475" modified="20170330000829684" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20170330001058050" title="$:/state/tab/sidebar--1835078512">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20161023184705203" modified="20170403194009971" title="$:/state/tab/sidebar--1835078512">
+<pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
@@ -8245,7 +8245,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כל המתכונים של ארוחת הכריסמס]] מג'דרה" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8265,7 +8265,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170401234043030" title="$:/temp/search">
+<div created="20161023184814872" modified="20170403194559194" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8398,6 +8398,94 @@ Error message and password prompt
 <div created="20161025191935600" modified="20161025192000859" title="$:/UploadURL">
 <pre>https://zzzen.com/cohen-sisters/store.php</pre>
 </div>
+<div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
+<pre></pre>
+</div>
+<div created="20161024110225652" modified="20161024125352292" tags="LTR" title="English">
+<pre>This item is in English.
+
+You see it written left to right because it is tagged `LTR` (uppercase).
+
+@@.rtl
+גם בדף כזה אפשר להכניס פיסקה מימין לשמאל.
+@@</pre>
+</div>
+<div created="20161024200912852" modified="20161217141129998" tags="" title="HH">
+<pre>! Happy Hour
+
+!!![[גורה: שוב, כאן כעת 2016, משחררת ממה שכתבנו בשנים הראשונות של המילניום הנוכחי]]:
+
+[img[pictures/xKgon0fjgyGD8PSb.JPG]]
+
+שמונה פרקים המתארים את המתרחש בחיי עובדי,דיירי ועוברי האורח שבבניין, כאשר הוא מתמקד בעיקר בתשע נשים שעובדות בו וב[[שלום]]. כמו כן ישנן דמויות משנה קבועות ודמויות אורחות.
+במהלך הזמן יתברר מן המתרחש, שתשע הנשים &quot;מחולקות&quot; ל-&quot;שני מחנות&quot;. המחנות אינם מוגדרים ככאלה, אלא הם תוצר של המציאות. (המדומה) .
+המצלמה היא זו שמספרת את הסיפור בתוך שמסיירת בין קומות וחדרי הבניין, וברחובות העיר הסמוכים לו עד ל[[מרינה זוטו]] שלחופי [[ים טתיס]]. 
+היא מסתכלת בעין אוהבת על שלום,[[הברמנית]], [[מוכרת הדיסקים/dj]], [[הספרית]], [[הספנית]], ו[[המסאז'יסטית]]. (להלן האחיות כהן).
+ובוחנת בחשדנות את [[האומנית]], [[אשת העסקים]], [[עורכת הדין]] ו[[היועצת]], (להלן [[האחיות K]] ).
+אל האחיות K מצטרפת מידי פעם אחות K מתחלפת המפרה את השגרה בבניין. האחות K המתחלפת יכולה להיות גבר, אישה, או כל יצור חי אחר. לשיטת [[המצלמה]] כל טיפוס יכול להפוך לאחות לרגעים או באופן קבוע.
+
+בפרקים הראשונים, אל תוך חייהן של הדמויות הקיימות מגיעה אחות K חמישית, בדמותה של [[סוחרת אומנות|אודליה]], המנסה לשאת חן בעיני שלום, ולגזול מכספו. היא משתכנת בהוסטל שבקומה הרביעית, ומנסה לכבוש את ליבו של הנ&quot;ל. היא מגלה שאל העיר הגיע  האדם ששלח אותה למשימת הפיתוי, שהוא עורך דין שמן ומיוזע ,EA שמו,שלובש גם הוא דמות של סוחר אומנות בכדי לעקוב אחרי אודליה. בנוסף לכך אודליה מגלה, שאחיה הסורר אף הוא הגיע לעיר במנוסתו מהמשטרה במדינה ממנה הגיעו.
+מאוחר יותר יתחבא אחיה של אודליה במרתף הבניין, שם ימצא אותו [[סטלין]], השרת ואיש התחזוקה של הבניין.
+המזימה נחשפת בעיקר על ידי האחיות C (בתחכום ובחן רבים )?
+למעשה, כל שוכני הבניין, כולל אנשי [[מערכת העיתון]], אנשי [[ההוסטל]] וכו' תורמים לפתרון העלילה.
+בהמשך, תוך כדי פתרון העלילה כבר מתרקמת עלילה עתידית שחלקה סכסוכים בין הדמויות הקבועות, בעיות אישיות מחייהן הפרטיים של אותן דמויות, דמויות נוספות של עוברים ושבים וכו'.
+אורכו של כל פרק כארבעים דקות, ולרוב מסתיים ב HAPPY HOUR   מסורתי, שעה של משקאות, [[אנט ג'מיימה]], שמחה וכיופים ב[[&quot;קפה מילר &quot;|קפה מילר]].
+</pre>
+</div>
+<div created="20161024053448116" modified="20161111214302931" tags="$:/tags/Stylesheet LTR" title="MyStyles" type="text/css">
+<pre>.left { text-align: left }
+.center { text-align: center }
+.right { text-align: right }
+.ltr { direction: ltr }
+.rtl,
+.tc-edit-texteditor,
+.tc-tiddler-preview-preview { direction: rtl }</pre>
+</div>
+<div created="20161023181104390" modified="20161113204648316" tags="$:/tags/Stylesheet LTR" title="RTLStylesheet" type="text/css">
+<pre>.tc-tiddler-title,
+.tc-tags-wrapper,
+.tc-tiddler-body,
+.tc-site-title,
+.tc-site-subtitle,
+.tc-timeline
+{
+    direction: rtl;
+}
+
+.tc-timeline
+{
+    text-align: left
+}
+
+.tc-site-title,
+.tc-site-subtitle
+{
+    padding-right: 8px
+}
+
+.tc-tiddler-frame .tc-tiddler-controls {
+    float: left;
+}
+
+/* tag a tiddler LTR (in uppercase) for left-to-right writing direction */
+
+.tc-tagged-LTR .tc-tiddler-title,
+.tc-tagged-LTR .tc-tags-wrapper,
+.tc-tagged-LTR .tc-tiddler-body,
+.tc-tiddler-system .tc-tiddler-title,
+.tc-tiddler-system .tc-tags-wrapper,
+.tc-tiddler-system .tc-tiddler-body
+{
+    direction: ltr;
+}
+
+.tc-tiddler-frame.tc-tagged-LTR .tc-tiddler-controls,
+.tc-tiddler-frame.tc-tiddler-system .tc-tiddler-controls
+
+{
+    float: right;
+}</pre>
+</div>
 <div created="20170112164936113" modified="20170125144039872" title="אהבה">
 <pre>[img[pictures/BH4qXOjJYFFQ2a7G.jpg]]
 
@@ -8468,8 +8556,7 @@ Error message and password prompt
 לאחרונה אירי, אווה ואני עובדות יחד על [[אימא, סבתא ואני]], סיפורים מאת דנה הבובה, על חייה עם איריס, ביתה של אווה ואווה.</pre>
 </div>
 <div created="20170402173414658" modified="20170402174754742" title="אורז לבן עם צנוברים">
-<pre>
-[img[pictures/orez-lavan-matconim.jpg]]
+<pre>[img[pictures/orez-lavan-matconim.jpg]]
 
 !!![[גורה]]:
 
@@ -8907,6 +8994,14 @@ Error message and password prompt
 
 </pre>
 </div>
+<div created="20170320161241857" modified="20170401161732072" title="האחיות K">
+<pre>[img[pictures/SX0Kp0WyaOlQqidh.jpg]]
+
+!!![[גורה]]:
+
+האחיות כן הן החתולות השורטות ב-[[HAPPY HOUR|HH]].
+</pre>
+</div>
 <div created="20161111215423587" modified="20170401163306347" title="האחיות כהן">
 <pre>[img[pictures/K86u1tbSHje03L3Y.jpg]]
 
@@ -8933,14 +9028,6 @@ Error message and password prompt
 
 
 
-</pre>
-</div>
-<div created="20170320161241857" modified="20170401161732072" title="האחיות K">
-<pre>[img[pictures/SX0Kp0WyaOlQqidh.jpg]]
-
-!!![[גורה]]:
-
-האחיות כן הן החתולות השורטות ב-[[HAPPY HOUR|HH]].
 </pre>
 </div>
 <div created="20161217141221233" modified="20170103181159486" title="הברמנית">
@@ -9410,10 +9497,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 או במילים אחרות,  [[טרמינל לומינטל|https://www.youtube.com/watch?v=GME1UyUpMPU]].</pre>
 </div>
 <div created="20170402193858167" modified="20170402194046673" title="מג'דרה">
-<pre>
-[img[pictures/mejadra-matconim.jpg]]
+<pre>[img[pictures/mejadra-matconim.jpg]]
 
 !!![[גורה]]:
+
+1. מבשלים כוס עדשים חומות כעשרים דקות.
+
+2. מכינים אורז לבן: בסיר בינוני מטגנים קלות את האורז בכף אחת של שמן, מוסיפים שתי כוסות מים חמים, ומעט מלח ים גס, מערבבים בקלות, מכסים במכסה, ומבשלים על אש קטנה כרבע שעה.
+
+3. בזמן שהאורז והעדשים מטגנים בצל-שניים לפי הטעם, פרוסים לרצועות דקות, עד להזהבה-השחמה.
+
+4. מסננים את העדשים, מערבבים אותם לתוך האורז, ממליחים לפי הטעם, ומפזרים מעל את הבצל המטוגן.
 
 </pre>
 </div>
@@ -9548,8 +9642,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 מרק הוא גבר שבגברים, הוא בעלה ההונגרי של [[סוניה]] ההונגריה, והוא מתכנת מחשבים, שפדה את חובו ועשה אקזיט כדבעי.</pre>
 </div>
 <div created="20170402151609777" modified="20170402152829128" title="מרק כתום בסיר גדול">
-<pre>
-[img[pictures/marak-katom.jpg]]
+<pre>[img[pictures/marak-katom.jpg]]
 
 !!![[יויו]]:
 
@@ -10191,19 +10284,20 @@ Fapina''
 
 //המשך יבוא//</pre>
 </div>
-<div created="20161026110100007" modified="20170331214812646" tags="" title="תשבץ למאומנים">
-<pre>|&amp;#9608;|&amp;#9608;|&amp;#9608;|נ|&amp;#9608;|&amp;#9608;|
-|&amp;#9608;|&amp;#9608;|&amp;#9608;|ח|&amp;#9608;|&amp;#9608;|
-|&amp;#9608;|&amp;#9608;|&amp;#9608;|מ|&amp;#9608;|&amp;#9608;|
-|&amp;#9608;|&amp;#9608;|&amp;#9608;|נ|&amp;#9608;|&amp;#9608;|
-|&amp;#9608;|&amp;#9608;|&amp;#9608;|מ|&amp;#9608;|&amp;#9608;|
-|מ|&amp;#9608;|&amp;#9608;|א|&amp;#9608;|&amp;#9608;|
-|&amp;#9608;|ל|&amp;#9608;|ו|&amp;#9608;|&amp;#9608;|
-|&amp;#9608;|&amp;#9608;|ו|נ|&amp;#9608;|&amp;#9608;|
-|&amp;#9608;|&amp;#9608;|&amp;#9608;|כ|&amp;#9608;|&amp;#9608;|
-|&amp;#9608;|&amp;#9608;|&amp;#9608;|M|ס|&amp;#9608;|
-|&amp;#9608;|&amp;#9608;|&amp;#9608;|A|&amp;#9608;|נ|
-|&amp;#9608;|&amp;#9608;|&amp;#9608;|N|O|S|</pre>
+<div created="20161026110100007" modified="20170403194001760" tags="" title="תשבץ למאומנים">
+<pre>|''&amp;#9608;''|''&amp;#9608;''|''&amp;#9608;''|''נ''|''&amp;#9608;''|''&amp;#9608;''|
+|''&amp;#9608;''|''&amp;#9608;''|''&amp;#9608;''|''ח''|''&amp;#9608;''|''&amp;#9608;''|
+|''&amp;#9608;''|''&amp;#9608;''|''&amp;#9608;''|''מ''|''&amp;#9608;''|''&amp;#9608;''|
+|''&amp;#9608;''|''&amp;#9608;''|''&amp;#9608;''|''נ''|''&amp;#9608;''|''&amp;#9608;''|
+|''&amp;#9608;''|''&amp;#9608;''|''&amp;#9608;''|''מ''|''&amp;#9608;''|''&amp;#9608;''|
+|''מ''|''&amp;#9608;''|''&amp;#9608;''|''א''|''&amp;#9608;''|''&amp;#9608;''|
+|''&amp;#9608;''|''ל''|''&amp;#9608;''|''ו''|''&amp;#9608;''|''&amp;#9608;''|
+|''&amp;#9608;''|''&amp;#9608;''|''ו''|''נ''|''&amp;#9608;''|''&amp;#9608;''|
+|''&amp;#9608;''|''&amp;#9608;''|''&amp;#9608;''|''כ''|''&amp;#9608;''|''&amp;#9608;''|
+|''&amp;#9608;''|''&amp;#9608;''|''&amp;#9608;''|''M''|''ס''|''&amp;#9608;''|
+|''&amp;#9608;''|''&amp;#9608;''|''&amp;#9608;''|''A''|''&amp;#9608;''|''נ''|
+|''&amp;#9608;''|''&amp;#9608;''|''&amp;#9608;''|''N''|''O''|''S''|
+</pre>
 </div>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
@@ -10238,60 +10332,6 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 בהמשך, תוך כדי פתרון העלילה כבר מתרקמת עלילה עתידית שחלקה סכסוכים בין הדמויות הקבועות, בעיות אישיות מחייהן הפרטיים של אותן דמויות, דמויות נוספות של עוברים ושבים וכו'.
 אורכו של כל פרק כארבעים דקות, ולרוב מסתיים ב HAPPY HOUR   מסורתי, שעה של משקאות, [[אנט ג'מיימה]], שמחה וכיופים ב[[&quot;קפה מילר &quot;|קפה מילר]].
 </pre>
-</div>
-<div created="20161024053448116" modified="20161111214302931" tags="$:/tags/Stylesheet LTR" title="MyStyles" type="text/css">
-<pre>.left { text-align: left }
-.center { text-align: center }
-.right { text-align: right }
-.ltr { direction: ltr }
-.rtl,
-.tc-edit-texteditor,
-.tc-tiddler-preview-preview { direction: rtl }</pre>
-</div>
-<div created="20161023181104390" modified="20161113204648316" tags="$:/tags/Stylesheet LTR" title="RTLStylesheet" type="text/css">
-<pre>.tc-tiddler-title,
-.tc-tags-wrapper,
-.tc-tiddler-body,
-.tc-site-title,
-.tc-site-subtitle,
-.tc-timeline
-{
-    direction: rtl;
-}
-
-.tc-timeline
-{
-    text-align: left
-}
-
-.tc-site-title,
-.tc-site-subtitle
-{
-    padding-right: 8px
-}
-
-.tc-tiddler-frame .tc-tiddler-controls {
-    float: left;
-}
-
-/* tag a tiddler LTR (in uppercase) for left-to-right writing direction */
-
-.tc-tagged-LTR .tc-tiddler-title,
-.tc-tagged-LTR .tc-tags-wrapper,
-.tc-tagged-LTR .tc-tiddler-body,
-.tc-tiddler-system .tc-tiddler-title,
-.tc-tiddler-system .tc-tags-wrapper,
-.tc-tiddler-system .tc-tiddler-body
-{
-    direction: ltr;
-}
-
-.tc-tiddler-frame.tc-tagged-LTR .tc-tiddler-controls,
-.tc-tiddler-frame.tc-tiddler-system .tc-tiddler-controls
-
-{
-    float: right;
-}</pre>
 </div>
 
 </div>
