מחיקת עברית ממוקססת

--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@ Error message and password prompt
 
 <li>$:/state/Excise/-392760529/new-title</li>
 
-<li>$:/state/folded/English</li>
-
 <li>$:/state/folded/ברוכים הבאים</li>
 
 <li>$:/state/folded/המעבדה</li>
+
+<li>$:/state/folded/English</li>
 
 <li>$:/state/Link/--15630481/search</li>
 
@@ -220,16 +220,6 @@ Error message and password prompt
 <li>$:/UploadName</li>
 
 <li>$:/UploadURL</li>
-
-<li>bg</li>
-
-<li>English</li>
-
-<li>HH</li>
-
-<li>MyStyles</li>
-
-<li>RTLStylesheet</li>
 
 <li>אהבה</li>
 
@@ -295,9 +285,9 @@ Error message and password prompt
 
 <li>האומנית</li>
 
-<li>האחיות K</li>
-
 <li>האחיות כהן</li>
+
+<li>האחיות K</li>
 
 <li>הברמנית</li>
 
@@ -391,8 +381,6 @@ Error message and password prompt
 
 <li>סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום</li>
 
-<li>עברית ממוקססת</li>
-
 <li>עורכת הדין</li>
 
 <li>עץ המשפחה של אווה</li>
@@ -443,9 +431,21 @@ Error message and password prompt
 
 <li>תומר</li>
 
+<li>תפוחי אדמה ובטטות בתנור</li>
+
 <li>תרבות הממשל היפנית</li>
 
 <li>תשבץ למאומנים</li>
+
+<li>bg</li>
+
+<li>English</li>
+
+<li>HH</li>
+
+<li>MyStyles</li>
+
+<li>RTLStylesheet</li>
 
 </ul>
 </p>
@@ -8197,13 +8197,13 @@ Error message and password prompt
 <div created="20161026202105658" modified="20161026202107028" title="$:/state/Excise/-392760529/new-title">
 <pre>הדירה</pre>
 </div>
-<div created="20161024125402340" modified="20161024125404684" title="$:/state/folded/English">
-<pre>show</pre>
-</div>
 <div created="20161024121359650" modified="20161024121402274" title="$:/state/folded/ברוכים הבאים">
 <pre>show</pre>
 </div>
 <div created="20161219171744217" modified="20161219171751648" title="$:/state/folded/המעבדה">
+<pre>show</pre>
+</div>
+<div created="20161024125402340" modified="20161024125404684" title="$:/state/folded/English">
 <pre>show</pre>
 </div>
 <div created="20161112214624841" modified="20161112214653371" title="$:/state/Link/--15630481/search">
@@ -8233,7 +8233,7 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170119225008497" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20161023184709475" modified="20170330000829684" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20170404191139238" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
 <div created="20161023184705203" modified="20170403194009971" title="$:/state/tab/sidebar--1835078512">
@@ -8245,7 +8245,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="המעבדה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8265,7 +8265,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170403194559194" title="$:/temp/search">
+<div created="20161023184814872" modified="20170404191852079" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8397,94 +8397,6 @@ Error message and password prompt
 </div>
 <div created="20161025191935600" modified="20161025192000859" title="$:/UploadURL">
 <pre>https://zzzen.com/cohen-sisters/store.php</pre>
-</div>
-<div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
-<pre></pre>
-</div>
-<div created="20161024110225652" modified="20161024125352292" tags="LTR" title="English">
-<pre>This item is in English.
-
-You see it written left to right because it is tagged `LTR` (uppercase).
-
-@@.rtl
-גם בדף כזה אפשר להכניס פיסקה מימין לשמאל.
-@@</pre>
-</div>
-<div created="20161024200912852" modified="20161217141129998" tags="" title="HH">
-<pre>! Happy Hour
-
-!!![[גורה: שוב, כאן כעת 2016, משחררת ממה שכתבנו בשנים הראשונות של המילניום הנוכחי]]:
-
-[img[pictures/xKgon0fjgyGD8PSb.JPG]]
-
-שמונה פרקים המתארים את המתרחש בחיי עובדי,דיירי ועוברי האורח שבבניין, כאשר הוא מתמקד בעיקר בתשע נשים שעובדות בו וב[[שלום]]. כמו כן ישנן דמויות משנה קבועות ודמויות אורחות.
-במהלך הזמן יתברר מן המתרחש, שתשע הנשים &quot;מחולקות&quot; ל-&quot;שני מחנות&quot;. המחנות אינם מוגדרים ככאלה, אלא הם תוצר של המציאות. (המדומה) .
-המצלמה היא זו שמספרת את הסיפור בתוך שמסיירת בין קומות וחדרי הבניין, וברחובות העיר הסמוכים לו עד ל[[מרינה זוטו]] שלחופי [[ים טתיס]]. 
-היא מסתכלת בעין אוהבת על שלום,[[הברמנית]], [[מוכרת הדיסקים/dj]], [[הספרית]], [[הספנית]], ו[[המסאז'יסטית]]. (להלן האחיות כהן).
-ובוחנת בחשדנות את [[האומנית]], [[אשת העסקים]], [[עורכת הדין]] ו[[היועצת]], (להלן [[האחיות K]] ).
-אל האחיות K מצטרפת מידי פעם אחות K מתחלפת המפרה את השגרה בבניין. האחות K המתחלפת יכולה להיות גבר, אישה, או כל יצור חי אחר. לשיטת [[המצלמה]] כל טיפוס יכול להפוך לאחות לרגעים או באופן קבוע.
-
-בפרקים הראשונים, אל תוך חייהן של הדמויות הקיימות מגיעה אחות K חמישית, בדמותה של [[סוחרת אומנות|אודליה]], המנסה לשאת חן בעיני שלום, ולגזול מכספו. היא משתכנת בהוסטל שבקומה הרביעית, ומנסה לכבוש את ליבו של הנ&quot;ל. היא מגלה שאל העיר הגיע  האדם ששלח אותה למשימת הפיתוי, שהוא עורך דין שמן ומיוזע ,EA שמו,שלובש גם הוא דמות של סוחר אומנות בכדי לעקוב אחרי אודליה. בנוסף לכך אודליה מגלה, שאחיה הסורר אף הוא הגיע לעיר במנוסתו מהמשטרה במדינה ממנה הגיעו.
-מאוחר יותר יתחבא אחיה של אודליה במרתף הבניין, שם ימצא אותו [[סטלין]], השרת ואיש התחזוקה של הבניין.
-המזימה נחשפת בעיקר על ידי האחיות C (בתחכום ובחן רבים )?
-למעשה, כל שוכני הבניין, כולל אנשי [[מערכת העיתון]], אנשי [[ההוסטל]] וכו' תורמים לפתרון העלילה.
-בהמשך, תוך כדי פתרון העלילה כבר מתרקמת עלילה עתידית שחלקה סכסוכים בין הדמויות הקבועות, בעיות אישיות מחייהן הפרטיים של אותן דמויות, דמויות נוספות של עוברים ושבים וכו'.
-אורכו של כל פרק כארבעים דקות, ולרוב מסתיים ב HAPPY HOUR   מסורתי, שעה של משקאות, [[אנט ג'מיימה]], שמחה וכיופים ב[[&quot;קפה מילר &quot;|קפה מילר]].
-</pre>
-</div>
-<div created="20161024053448116" modified="20161111214302931" tags="$:/tags/Stylesheet LTR" title="MyStyles" type="text/css">
-<pre>.left { text-align: left }
-.center { text-align: center }
-.right { text-align: right }
-.ltr { direction: ltr }
-.rtl,
-.tc-edit-texteditor,
-.tc-tiddler-preview-preview { direction: rtl }</pre>
-</div>
-<div created="20161023181104390" modified="20161113204648316" tags="$:/tags/Stylesheet LTR" title="RTLStylesheet" type="text/css">
-<pre>.tc-tiddler-title,
-.tc-tags-wrapper,
-.tc-tiddler-body,
-.tc-site-title,
-.tc-site-subtitle,
-.tc-timeline
-{
-    direction: rtl;
-}
-
-.tc-timeline
-{
-    text-align: left
-}
-
-.tc-site-title,
-.tc-site-subtitle
-{
-    padding-right: 8px
-}
-
-.tc-tiddler-frame .tc-tiddler-controls {
-    float: left;
-}
-
-/* tag a tiddler LTR (in uppercase) for left-to-right writing direction */
-
-.tc-tagged-LTR .tc-tiddler-title,
-.tc-tagged-LTR .tc-tags-wrapper,
-.tc-tagged-LTR .tc-tiddler-body,
-.tc-tiddler-system .tc-tiddler-title,
-.tc-tiddler-system .tc-tags-wrapper,
-.tc-tiddler-system .tc-tiddler-body
-{
-    direction: ltr;
-}
-
-.tc-tiddler-frame.tc-tagged-LTR .tc-tiddler-controls,
-.tc-tiddler-frame.tc-tiddler-system .tc-tiddler-controls
-
-{
-    float: right;
-}</pre>
 </div>
 <div created="20170112164936113" modified="20170125144039872" title="אהבה">
 <pre>[img[pictures/BH4qXOjJYFFQ2a7G.jpg]]
@@ -8994,14 +8906,6 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 
 </pre>
 </div>
-<div created="20170320161241857" modified="20170401161732072" title="האחיות K">
-<pre>[img[pictures/SX0Kp0WyaOlQqidh.jpg]]
-
-!!![[גורה]]:
-
-האחיות כן הן החתולות השורטות ב-[[HAPPY HOUR|HH]].
-</pre>
-</div>
 <div created="20161111215423587" modified="20170401163306347" title="האחיות כהן">
 <pre>[img[pictures/K86u1tbSHje03L3Y.jpg]]
 
@@ -9028,6 +8932,14 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 
 
 
+</pre>
+</div>
+<div created="20170320161241857" modified="20170401161732072" title="האחיות K">
+<pre>[img[pictures/SX0Kp0WyaOlQqidh.jpg]]
+
+!!![[גורה]]:
+
+האחיות כן הן החתולות השורטות ב-[[HAPPY HOUR|HH]].
 </pre>
 </div>
 <div created="20161217141221233" modified="20170103181159486" title="הברמנית">
@@ -9172,7 +9084,7 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 
 זואי. המטפלת השמחה-עצובה. ראש קופירייטרי, טיפולית, דואגת לכל, יכולה להתגייס לתחמנויות, יכולת משחק, מסאז'יסטית, לוק תמים, חרוצה, מתכננת.</pre>
 </div>
-<div created="20161113192814802" modified="20170326082401022" title="המעבדה">
+<div created="20161113192814802" modified="20170404191846627" title="המעבדה">
 <pre>[img[pictures/t2az8aqECTTa8imN.JPG]]
 
 !!![[כאן היינו]]
@@ -9204,7 +9116,7 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 * הרחבת המיתולוגיות המשתלבות במיתולוגיות הקיימות.
 *גלגולים ( כחלק מהרחבת המיתולוגיות האישיות והכלליות , ומתוך הרצון למצוא סיפורים מחלימים) .
 
-האחיות דוברות [[עברית ממוקססת]] כנהוג בעידן זה.
+האחיות דוברות עברית ממוקססת, כנהוג בעידן זה.
 
 
 כעת (השנה היא 2016 ואנחנו בפריז), המעבדה/ מתקן השיגור, נמצאת/א בחדרו של יויו שבדירה, ומלבד שתינו נמצאות איתנו שאר האחיות.
@@ -9501,11 +9413,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 !!![[גורה]]:
 
-1. מבשלים כוס עדשים חומות כעשרים דקות.
+1. מבשלים כוס עדשים חומות מכוסות במים כעשרים דקות.
 
-2. מכינים אורז לבן: בסיר בינוני מטגנים קלות את האורז בכף אחת של שמן, מוסיפים שתי כוסות מים חמים, ומעט מלח ים גס, מערבבים בקלות, מכסים במכסה, ומבשלים על אש קטנה כרבע שעה.
+2. מכינים אורז לבן: בסיר בינוני מטגנים קלות את האורז בכף אחת של שמן, מוסיפים שתי כוסות מים חמים ומעט מלח ים גס, מערבבים בקלות, מכסים במכסה, ומבשלים על אש קטנה כרבע שעה.
 
-3. בזמן שהאורז והעדשים מטגנים בצל-שניים לפי הטעם, פרוסים לרצועות דקות, עד להזהבה-השחמה.
+3. בזמן שהאורז והעדשים מתבשלים, מטגנים בצל-שניים לפי הטעם, פרוסים לרצועות דקות, עד להזהבה-השחמה.
 
 4. מסננים את העדשים, מערבבים אותם לתוך האורז, ממליחים לפי הטעם, ומפזרים מעל את הבצל המטוגן.
 
@@ -9728,11 +9640,6 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 מניחים על פרוסות הסלק ערימה מהסלט, מפזרים מעל זרעי שומשום שחור, ומגישים.
 
 </pre>
-</div>
-<div created="20161215231623906" modified="20161217211339792" title="עברית ממוקססת">
-<pre>[img[pictures/trGAbauBpvXdCF36.JPGn]]
-
-עברית ממוקססת כשמה כן היא. עם נטייה חזקה ל[[גלובל|הכפר הגלובלי]].</pre>
 </div>
 <div created="20170319172108447" modified="20170319172332136" title="עורכת הדין">
 <pre>[img[pictures/4kRbQgdyhAC1bAb3.jpg]]
@@ -10023,12 +9930,12 @@ Fapina''
 
 </pre>
 </div>
-<div created="20161213210419446" modified="20170401234906427" title="שאלון האחיות">
+<div created="20161213210419446" modified="20170404165040157" title="שאלון האחיות">
 <pre>[img[pictures/sheelon-haachayot.jpg]]
 
 !!![[גורה]]:
 
-את השאלון שבהמשך כתבנו, יויו ואני, כשהיינו [[שם|המעבדה]]. השארתי גם את ההקדמה שכתבנו אז, זה היה ב-2003 פלוס-מינוס, כלשונה. זה משעשע אותי ואפילו מעט מביך, כי זה נשמע לי מיושן. מאידך גם כתבנו, שהאחיות מדברות [[עברית ממוקססת]] כנהוג בעידן זה. ואולי כעת זה יותר &quot;גלובלית ממוקססת&quot;. אז הנה הדברים:
+את השאלון שבהמשך כתבנו, יויו ואני, כשהיינו [[שם|המעבדה]]. השארתי גם את ההקדמה שכתבנו אז, זה היה ב-2003 פלוס-מינוס, כלשונה. זה משעשע אותי ואפילו מעט מביך, כי זה נשמע לי מיושן. מאידך גם כתבנו, שהאחיות מדברות &quot;עברית ממוקססת&quot; כנהוג בעידן זה. ואולי כעת זה יותר &quot;גלובלית ממוקססת&quot;. אז הנה הדברים:
 
 
 !!![[שאלון המאה ואחת]] :
@@ -10091,7 +9998,6 @@ Fapina''
 # האם את סובלת מרגשות אשם?
 # האם חשובים לך מותגים?
 # האם את מתאפרת?
-# האם קורה שאת משתעממת?
 # האם עברת חרמות בחייך?
 # האם גנבת לחברתך הטובה את בן זוגה?
 # האם חברתך הטובה גנבה לך את בן זוגך או את שהשתוקקה לו נפשך?
@@ -10139,7 +10045,6 @@ Fapina''
 #האם את נמשכת לגדי סוקניק?
 # לו לא הייתה לך מגבלה כספית, האם היית עושה ניתוח פלסטי כלשהו?
 # האם את אוהבת קניות?
-# האם את נוהגת לצבוע את שערותייך?
 # האם את מתקלחת כל יום?
 # האם אי פעם עשית בניית ציפורניים?
 # האם את יודעת לשחות?
@@ -10275,6 +10180,9 @@ Fapina''
 
 </pre>
 </div>
+<div created="20170404162732372" modified="20170404164821949" title="תפוחי אדמה ובטטות בתנור">
+<pre></pre>
+</div>
 <div created="20161026221719159" modified="20170401171255749" tags="" title="תרבות הממשל היפנית">
 <pre>[img[pictures/90sBKBFvOgA1QT3a.jpg]]
 
@@ -10332,6 +10240,60 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 בהמשך, תוך כדי פתרון העלילה כבר מתרקמת עלילה עתידית שחלקה סכסוכים בין הדמויות הקבועות, בעיות אישיות מחייהן הפרטיים של אותן דמויות, דמויות נוספות של עוברים ושבים וכו'.
 אורכו של כל פרק כארבעים דקות, ולרוב מסתיים ב HAPPY HOUR   מסורתי, שעה של משקאות, [[אנט ג'מיימה]], שמחה וכיופים ב[[&quot;קפה מילר &quot;|קפה מילר]].
 </pre>
+</div>
+<div created="20161024053448116" modified="20161111214302931" tags="$:/tags/Stylesheet LTR" title="MyStyles" type="text/css">
+<pre>.left { text-align: left }
+.center { text-align: center }
+.right { text-align: right }
+.ltr { direction: ltr }
+.rtl,
+.tc-edit-texteditor,
+.tc-tiddler-preview-preview { direction: rtl }</pre>
+</div>
+<div created="20161023181104390" modified="20161113204648316" tags="$:/tags/Stylesheet LTR" title="RTLStylesheet" type="text/css">
+<pre>.tc-tiddler-title,
+.tc-tags-wrapper,
+.tc-tiddler-body,
+.tc-site-title,
+.tc-site-subtitle,
+.tc-timeline
+{
+    direction: rtl;
+}
+
+.tc-timeline
+{
+    text-align: left
+}
+
+.tc-site-title,
+.tc-site-subtitle
+{
+    padding-right: 8px
+}
+
+.tc-tiddler-frame .tc-tiddler-controls {
+    float: left;
+}
+
+/* tag a tiddler LTR (in uppercase) for left-to-right writing direction */
+
+.tc-tagged-LTR .tc-tiddler-title,
+.tc-tagged-LTR .tc-tags-wrapper,
+.tc-tagged-LTR .tc-tiddler-body,
+.tc-tiddler-system .tc-tiddler-title,
+.tc-tiddler-system .tc-tags-wrapper,
+.tc-tiddler-system .tc-tiddler-body
+{
+    direction: ltr;
+}
+
+.tc-tiddler-frame.tc-tagged-LTR .tc-tiddler-controls,
+.tc-tiddler-frame.tc-tiddler-system .tc-tiddler-controls
+
+{
+    float: right;
+}</pre>
 </div>
 
 </div>
