בטטות ותפוחי אדמה

--- a/index.html
+++ b/index.html
@@ -8236,8 +8236,8 @@ Error message and password prompt
 <div created="20161023184709475" modified="20170404191139238" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20170403194009971" title="$:/state/tab/sidebar--1835078512">
-<pre>$:/core/ui/SideBar/Open</pre>
+<div created="20161023184705203" modified="20170404202237179" title="$:/state/tab/sidebar--1835078512">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
@@ -8245,7 +8245,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="המעבדה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כל המתכונים של ארוחת הכריסמס]] [[פלפלים קלויים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8467,7 +8467,7 @@ Error message and password prompt
 
 לאחרונה אירי, אווה ואני עובדות יחד על [[אימא, סבתא ואני]], סיפורים מאת דנה הבובה, על חייה עם איריס, ביתה של אווה ואווה.</pre>
 </div>
-<div created="20170402173414658" modified="20170402174754742" title="אורז לבן עם צנוברים">
+<div created="20170402173414658" modified="20170404203744152" tags="[[מתכוני ארוחת הכריסמס]]" title="אורז לבן עם צנוברים">
 <pre>[img[pictures/orez-lavan-matconim.jpg]]
 
 !!![[גורה]]:
@@ -9353,7 +9353,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170402165550173" modified="20170402172249911" title="לוקוס בתנור">
+<div created="20170402165550173" modified="20170404203800222" tags="[[מתכוני ארוחת הכריסמס]]" title="לוקוס בתנור">
 <pre>[img[pictures/dag-matconim.jpg]]
 
 !!![[יויו]]:
@@ -9408,7 +9408,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 או במילים אחרות,  [[טרמינל לומינטל|https://www.youtube.com/watch?v=GME1UyUpMPU]].</pre>
 </div>
-<div created="20170402193858167" modified="20170402194046673" title="מג'דרה">
+<div created="20170402193858167" modified="20170404203721884" tags="[[מתכוני ארוחת הכריסמס]]" title="מג'דרה">
 <pre>[img[pictures/mejadra-matconim.jpg]]
 
 !!![[גורה]]:
@@ -9553,7 +9553,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 מרק הוא גבר שבגברים, הוא בעלה ההונגרי של [[סוניה]] ההונגריה, והוא מתכנת מחשבים, שפדה את חובו ועשה אקזיט כדבעי.</pre>
 </div>
-<div created="20170402151609777" modified="20170402152829128" title="מרק כתום בסיר גדול">
+<div created="20170402151609777" modified="20170404203819671" tags="[[מתכוני ארוחת הכריסמס]]" title="מרק כתום בסיר גדול">
 <pre>[img[pictures/marak-katom.jpg]]
 
 !!![[יויו]]:
@@ -9616,7 +9616,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ''תה שחור, ארבע סוכר, לא לערבב.''</pre>
 </div>
-<div created="20161115212458524" modified="20170327155415996" title="סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום">
+<div created="20161115212458524" modified="20170404203928325" tags="[[מתכוני ארוחת הכריסמס]]" title="סלט שורשים חתוכים למקלונים בוהק משמן זית, לימון, מלח ושמן שומשום">
 <pre>[img[pictures/yBdpK1g4nA5g7Cp0.jpg]]
 
 !!![[אנה]]:
@@ -9700,7 +9700,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161118213157653" modified="20161118223949765" title="פאי פקאן עם קרמל">
+<div created="20161118213157653" modified="20170404203852975" tags="[[מתכוני ארוחת הכריסמס]]" title="פאי פקאן עם קרמל">
 <pre>[img[pictures/MLWABb3xeHOEf9eG.JPG]]
 
 
@@ -10180,8 +10180,20 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170404162732372" modified="20170404164821949" title="תפוחי אדמה ובטטות בתנור">
-<pre></pre>
+<div created="20170404162732372" modified="20170404203658838" tags="[[מתכוני ארוחת הכריסמס]]" title="תפוחי אדמה ובטטות בתנור">
+<pre>
+
+[img[pictures/batatot-batanoor.jpg]]
+
+!!![[אירי]]:
+
+* מחממים את תנור האפייה ל180 מעלות צלזיוס.
+* לתוך תבנית מרופדת בנייר אפייה חותכים ל&quot;סירות&quot; ארבעה תפוחי אדמה בינוניים ושלוש בטטות בינוניות (בגודל).
+* פורסים שתי שיני שום לפרוסות דקות ומפזרים מעל תפוחי האדמה והבטטות בחתוכים.
+* ממיסים בקערה חמישים גרם חמאה, לאחר שנמסה מערבבים לתוכה רבע כוס שמן זית, ומברישים את כל הפינות.
+* מפזרים מלח ים גס וגבעולי רוזמרין.
+* אופים 40 דקות ב180 מעלות ואחר כך מעלים את  הטמפרטורה ל-200 מעלות ואופים רבע שעה-עשרים דקות נוספות.
+</pre>
 </div>
 <div created="20161026221719159" modified="20170401171255749" tags="" title="תרבות הממשל היפנית">
 <pre>[img[pictures/90sBKBFvOgA1QT3a.jpg]]
